# femX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/examples/: cantilever.py  simply_supported_beam.py
src/femx/: __init__.py  beam.py  degree_of_freedom.py  gauss_point.py  main.py  mainQ8.py  node.py  point.py  stress_measures.py  strucutre.py  tensor.py  vector.py
src/femx/Elements/: element.py
src/femx/Elements/PlaneElements/: Q4_element.py  Q8_element.py
src/femx/FailureCriteria/: failure_criterion.py  tresca_yield_criterion.py
src/femx/Materials/: material.py
src/femx/Materials/PressureIndependentMaterials/: pressure_independent_material.py  steel.py
src/femx/Solvers/: nonlinear_solver.py  solver.py
src/femx/Viewer/: viewer.py  viewer_2.py  viewer_3.py  visualizer.py
src/femx/elements/: element.py
src/femx/elements/plane_elements/: Q4_element.py  Q8_element.py
src/femx/failure_criteria/: failure_criterion.py  tresca_yield_criterion.py
src/femx/materials/: material.py
src/femx/materials/pressure_independent_materials/: pressure_independent_material.py  steel.py
src/femx/solvers/: nonlinear_solver.py  solver.py
src/femx/viewer/: __init__.py  viewer.py  viewer_2.py  viewer_3.py
tests/: test_femx.py
