[tool.poetry]
name = "femx"
version = "0.1.0"
description = "A package for finite element analysis of structures"
authors = ["Hazem Kassab"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
